--- a/src/components/style.css
+++ b/src/components/style.css
@@ -53,13 +53,12 @@ html,body{
     justify-content: center;
     align-items: center;
     gap: 15px;
-    width: 550px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
 }
 .hero-section h1{
-    font-size: 4.5rem;
+    font-size: 3rem;
     text-transform: uppercase;
     font-weight: normal;
     letter-spacing: 30px;
@@ -75,18 +74,38 @@ html,body{
 
 li{
     position: relative;
-    width: 850px;
     padding: 20px;
-    /* border-radius: 10px; */
     background-color: #fff;
     display: grid;
-    grid-template-columns: 0.5fr 1.25fr 1.5fr;
-    gap: 30px;
+    grid-template-rows: 0.5fr 1.05fr 1.2fr;
     align-items: center;
     border: 1px solid grey;
     transition: 0.2s all ease;
     margin-top: 10px;
 }
+
+.date{
+    color: #333;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.date h2{
+    font-size: 32px;
+}
+.date h4::after{
+    content: '';
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: 15px;
+    height: 1.5px;
+    background-color: #333;
+}
+
+
 li .img-container{
     width: 100%;
     height: 100%;
@@ -122,6 +141,7 @@ li .user-details{
     font-size: 14.5px;
     margin-top: 5px;
 }
+
 .blog-body{
     max-height: 110px;
     overflow: hidden;
@@ -134,27 +154,6 @@ li .content-type{
     position: absolute;
     top: 5px;
     right: 10px;
-}
-
-.date{
-    color: #333;
-    height: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.date h2{
-    font-size: 32px;
-}
-.date h4::after{
-    content: '';
-    position: absolute;
-    top: 20px;
-    left: 0;
-    width: 15px;
-    height: 1.5px;
-    background-color: #333;
 }
 
 .blog-view{
@@ -279,3 +278,41 @@ li .content-type{
     text-align: center;
     color: crimson;
 } 
+
+
+@media screen and (min-width:600px){
+    .hero-section{
+        color: #fff;
+        width: 100%;
+        height: 30vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+        width: 550px;
+        margin: 0 auto;
+        padding: 20px;
+        text-align: center;
+    }
+    .hero-section h1{
+        font-size: 4.5rem;
+        text-transform: uppercase;
+        font-weight: normal;
+        letter-spacing: 30px;
+    }
+    li{
+        position: relative;
+        width: 850px;
+        padding: 20px;
+        /* border-radius: 10px; */
+        background-color: #fff;
+        display: grid;
+        grid-template-columns: 0.5fr 1.25fr 1.5fr;
+        gap: 30px;
+        align-items: center;
+        border: 1px solid grey;
+        transition: 0.2s all ease;
+        margin-top: 10px;
+    }
+}
